# woz-harness-coding-workspace-codex

./: .dockerignore  Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: woz-harness-deploy.yml
codex/: config.toml
src/: agent.py  helpers.py
