[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woz-harness-coding-workspace-codex"
version = "0.1.0"
description = "WOZ harness agent (Coding Workspace Codex template)"
requires-python = ">=3.12"
dependencies = [
  "terminaluse[observability]",
  "openai-agents>=0.9.0,<1.0.0",
  "slack_sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
